--- a/index.html
+++ b/index.html
@@ -22,9 +22,15 @@ La risposta finale (o output) sarà anch’essa da scrivere in console.
 MILESTONE 2:
 Solo una volta che il milestone 1 sarà completo e funzionante allora realizzeremo un form in pagina in cui l’utente potrà inserire i dati e visualizzare il calcolo finale con il prezzo.
 Il recap dei dati e l'output del prezzo finale, andranno quindi stampati in pagina (il prezzo dovrà essere formattato con massimo due decimali, per indicare i centesimi sul prezzo). -->
-    <input type="text">
-    <input type="text">
-    <button>Cliccami</button>
+    <div class="input">
+        <label for="km">Scrivi Distanza</label>
+        <input name="km" id="km"  type="text">
+    </div>
+    <div class="input">
+        <label for="eta">Scrivi Eta</label>
+        <input name="eta" id="eta"type="text">
+    </div>
+        <button id="cliccami">Cliccami</button>
 <script src="myscript.js"></script>
 </body>
 </html>
